--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,8 @@
 </header>
 <main>
     <section>
-       <div class="container">
-           <div class="row">
-               <app-user></app-user>
-           </div>
-
-       </div>
+    
+        <app-user-list></app-user-list>
     </section>
 </main>
 
