--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6">
+<div *ngFor="let user of userList" class="col-lg-6">
     <div class="card">
         <img class="card-img-top" src="..." alt="Card image cap">
         <div class="card-body">
