--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,6 +8,12 @@ header{
     background: transparent;
 
   }
+  select{
+    color: #fff;
+  }
+  option{
+    color: #edbe2f;
+  }
 }
 section{
   padding: 80px 0;
